# Generated by Django 5.1 on 2026-03-01 06:39

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('tenants', '0002_tenant_city'),
        ('transactions', '0001_initial'),
        ('users', '0003_otpcode'),
    ]

    operations = [
        migrations.CreateModel(
            name='SellerLead',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('full_name', models.CharField(max_length=255)),
                ('email', models.CharField(max_length=255)),
                ('phone', models.CharField(max_length=50)),
                ('property_type', models.CharField(max_length=20)),
                ('location', models.CharField(blank=True, max_length=255)),
                ('square_meters', models.DecimalField(blank=True, decimal_places=2, max_digits=10, null=True)),
                ('bedrooms', models.IntegerField(blank=True, null=True)),
                ('bathrooms', models.IntegerField(blank=True, null=True)),
                ('expected_price', models.DecimalField(blank=True, decimal_places=2, max_digits=14, null=True)),
                ('status', models.CharField(choices=[('new', 'Nuevo'), ('contacted', 'Contactado'), ('in_review', 'En revisión'), ('converted', 'Convertido'), ('rejected', 'Rechazado')], default='new', max_length=15)),
                ('notes', models.TextField(blank=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('assigned_agent_membership', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='assigned_seller_leads', to='users.tenantmembership')),
                ('tenant', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='seller_leads', to='tenants.tenant')),
            ],
            options={
                'db_table': 'seller_leads',
            },
        ),
    ]
